--- a/config/config.json
+++ b/config/config.json
@@ -8,8 +8,9 @@
 "max_price":0,
 "min_room":0,
 "max_room":0,
+"photos" : false,
+"stop_tim":5,
 "REQUESTS_HEADERS" : {"User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:75.0) Gecko/20100101 Firefox/75.0"},
 "SEARCHPAGE_IMMOWEB" : "https://www.immoweb.be/fr/recherche/",
-"IMMOWEB_CLASSIFIED" : "https://www.immoweb.be/fr/annonce/",
-"PHOTOS" : false
+"IMMOWEB_CLASSIFIED" : "https://www.immoweb.be/fr/annonce/"
 }
